RequireHttpsMetadata property into AuthenticationSetting in SchedulingNotifications.Api #29

--- a/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.DockerDevelopment.json
+++ b/SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/appsettings.DockerDevelopment.json
@@ -7,6 +7,7 @@
     "Audience": "407acbe0-3063-427a-8501-770640d9913f",
     "Authority": "https://identity-api.vc.local:7066",
     "DefaultScheme": "Bearer",
+    "RequireHttpsMetadata": true,
     "ValidateAudience": true
   },
   "AuthorizationSetting": {
