Default docker compose file for own local development #29

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,484 +9,18 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
-    expose:
+    ports:
       - 5672:5672
       - 15672:15672
-    networks:
-      - vc-rabbitmq-shared-network
     restart: on-failure
 
-  samba:
-    build:
-      context: .
-      dockerfile: ./_docker/samba/Dockerfile
-    image: samba
-    container_name: samba
-    expose:
-      - 139:139/tcp
-      - 445:445/tcp
-    ports:
-      - 1390:139/tcp
-      - 4450:445/tcp
-    networks:
-      vc-samba-shared-network:
-        ipv4_address: 77.7.0.1
-    volumes:
-      - ./_docker/samba/storage/:/storage
-    stdin_open: true
-    tty: true
-
-  public-web:
-    build:
-      context: .
-      dockerfile: ./Public/src/Fnunez.VeterinaryClinic.Public.Web/Dockerfile
-    image: public-web
-    container_name: public-web
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7138
-      - ASPNETCORE_HTTPS_PORT=7138
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-      - VIRTUAL_HOST=public-web.vc.local
-    expose:
-      - 7138:7138
-    ports:
-      - 7138:7138
-    networks:
-      - vc-rabbitmq-shared-network
-      - vc-web-network
-    restart: on-failure
-    depends_on:
-      - rabbitmq
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.Public.Web.dll"
-
-  identity-db:
+  sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: identity-db
+    container_name: sqlserver
     environment:
       ACCEPT_EULA: "Y"
       MSSQL_PID: "Developer"
       MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14330:1433
     ports:
       - 14330:1433
-    networks:
-      - vc-identity-internal-network
     restart: on-failure
-
-  identity-api:
-    build:
-      context: .
-      dockerfile: ./Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Dockerfile
-    image: identity-api
-    container_name: identity-api.vc.local
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7066
-      - ASPNETCORE_HTTPS_PORT=7066
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-      - VIRTUAL_HOST=identity-api.vc.local
-    expose:
-      - 7066:7066
-    ports:
-      - 7066:7066
-    networks:
-      - vc-identity-internal-network
-      - vc-identity-shared-network
-      - vc-web-network
-    restart: on-failure
-    depends_on:
-      - identity-db
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.Identity.Api.dll"
-
-  clinicmanagement-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: clinicmanagement-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_PID: "Developer"
-      MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14331:1433
-    ports:
-      - 14331:1433
-    networks:
-      - vc-clinicmanagement-internal-network
-    restart: on-failure
-
-  clinicmanagement-api:
-    build:
-      context: .
-      dockerfile: ./ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Dockerfile
-    image: clinicmanagement-api
-    container_name: clinicmanagement-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7229
-      - ASPNETCORE_HTTPS_PORT=7229
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7229:7229
-    networks:
-      - vc-clinicmanagement-internal-network
-      - vc-identity-shared-network
-      - vc-rabbitmq-shared-network
-      - vc-samba-shared-network
-    restart: on-failure
-    depends_on:
-      - clinicmanagement-db
-      - identity-api
-      - rabbitmq
-      - samba
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-      - samba-volume:/storage
-    entrypoint: /bin/sh -c "sleep 20 && update-ca-certificates && dotnet Fnunez.VeterinaryClinic.ClinicManagement.Api.dll"
-
-  clinicmanagement-blazor:
-    build:
-      context: .
-      dockerfile: ./ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server/Dockerfile
-    image: clinicmanagement-blazor
-    container_name: clinicmanagement-blazor
-    environment:
-      # Per Duende's BFF license requirements, stay as Development environment
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:7004
-      - ASPNETCORE_HTTPS_PORT=7004
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-      - VIRTUAL_HOST=clinicmanagement-blazor.vc.local
-    expose:
-      - 7004:7004
-    ports:
-      - 7004:7004
-    networks:
-      - vc-clinicmanagement-internal-network
-      - vc-identity-shared-network
-      - vc-web-network
-    restart: on-failure
-    depends_on:
-      - clinicmanagement-api
-      - identity-api
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Server.dll"
-
-  clinicmanagementnotifications-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: clinicmanagementnotifications-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_PID: "Developer"
-      MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14332:1433
-    ports:
-      - 14332:1433
-    networks:
-      - vc-clinicmanagement-internal-network
-    restart: on-failure
-
-  clinicmanagementnotifications-api:
-    build:
-      context: .
-      dockerfile: ./ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/Dockerfile
-    image: clinicmanagementnotifications-api
-    container_name: clinicmanagementnotifications-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7082
-      - ASPNETCORE_HTTPS_PORT=7082
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7082:7082
-    networks:
-      - vc-clinicmanagement-internal-network
-      - vc-identity-shared-network
-      - vc-rabbitmq-shared-network
-    restart: on-failure
-    depends_on:
-      - clinicmanagementnotifications-db
-      - identity-api
-      - rabbitmq
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api.dll"
-
-  scheduling-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: scheduling-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_PID: "Developer"
-      MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14333:1433
-    ports:
-      - 14333:1433
-    networks:
-      - vc-scheduling-internal-network
-    restart: on-failure
-
-  scheduling-api:
-    build:
-      context: .
-      dockerfile: ./Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Dockerfile
-    image: scheduling-api
-    container_name: scheduling-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7266
-      - ASPNETCORE_HTTPS_PORT=7266
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7266:7266
-    networks:
-      - vc-identity-shared-network
-      - vc-rabbitmq-shared-network
-      - vc-samba-shared-network
-      - vc-scheduling-internal-network
-    restart: on-failure
-    depends_on:
-      - identity-api
-      - clinicmanagement-api
-      - rabbitmq
-      - samba
-      - scheduling-db
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-      - samba-volume:/storage
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.Scheduling.Api.dll"
-
-  scheduling-blazor:
-    build:
-      context: .
-      dockerfile: ./Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server/Dockerfile
-    image: scheduling-blazor
-    container_name: scheduling-blazor
-    environment:
-      # Per Duende's BFF license requirements, stay as Development environment
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:7154
-      - ASPNETCORE_HTTPS_PORT=7154
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-      - VIRTUAL_HOST=scheduling-blazor.vc.local
-    expose:
-      - 7154:7154
-    ports:
-      - 7154:7154
-    networks:
-      - vc-identity-shared-network
-      - vc-scheduling-internal-network
-      - vc-web-network
-    restart: on-failure
-    depends_on:
-      - identity-api
-      - scheduling-api
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Server.dll"
-
-  schedulingnotifications-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: schedulingnotifications-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_PID: "Developer"
-      MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14334:1433
-    ports:
-      - 14334:1433
-    networks:
-      - vc-scheduling-internal-network
-    restart: on-failure
-
-  schedulingnotifications-api:
-    build:
-      context: .
-      dockerfile: ./SchedulingN/src/Presentation/Fnunez.VeterinaryClinic.SchedulingNotifications.Api/Dockerfile
-    image: schedulingnotifications-api
-    container_name: schedulingnotifications-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7183
-      - ASPNETCORE_HTTPS_PORT=7183
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7183:7183
-    networks:
-      - vc-identity-shared-network
-      - vc-rabbitmq-shared-network
-      - vc-scheduling-internal-network
-    restart: on-failure
-    depends_on:
-      - identity-api
-      - rabbitmq
-      - schedulingnotifications-db
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.SchedulingNotifications.Api.dll"
-
-  schedulingemailsender-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: schedulingemailsender-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_PID: "Developer"
-      MSSQL_SA_PASSWORD: "VeterinaryClinic123!"
-    expose:
-      - 14335:1433
-    ports:
-      - 14335:1433
-    networks:
-      - vc-scheduling-internal-network
-    restart: on-failure
-
-  schedulingemailsender-api:
-    build:
-      context: .
-      dockerfile: ./SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/Dockerfile
-    image: schedulingemailsender-api
-    container_name: schedulingemailsender-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7195
-      - ASPNETCORE_HTTPS_PORT=7195
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7195:7195
-    networks:
-      - vc-rabbitmq-shared-network
-      - vc-scheduling-internal-network
-    restart: on-failure
-    depends_on:
-      - rabbitmq
-      - schedulingemailsender-db
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.SchedulingEmailSender.Api.dll"
-
-  emailservice-api:
-    build:
-      context: .
-      dockerfile: ./EmailService/src/Fnunez.VeterinaryClinic.EmailService.Api/Dockerfile
-    image: emailservice-api
-    container_name: emailservice-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=DockerDevelopment
-      - ASPNETCORE_URLS=https://+:7284
-      - ASPNETCORE_HTTPS_PORT=7284
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=VeterinaryClinic123!
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/veterinaryclinic.pfx
-    expose:
-      - 7284:7284
-      - 587:587
-    ports:
-      - :587
-    networks:
-      - vc-emailservice-shared-network
-      - vc-rabbitmq-shared-network
-    restart: on-failure
-    depends_on:
-      - rabbitmq
-    volumes:
-      - ./_docker/certs/veterinaryclinic.pfx:/https/veterinaryclinic.pfx:ro
-      - ./_docker/certs/veterinaryclinic.crt:/usr/local/share/ca-certificates/veterinaryclinic.crt:ro
-    entrypoint: /bin/sh -c "update-ca-certificates && dotnet Fnunez.VeterinaryClinic.EmailService.Api.dll"
-
-networks:
-  vc-web-network:
-    name: vc-web-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.0.0.0/16
-          gateway: 77.0.0.254
-
-  vc-rabbitmq-shared-network:
-    name: vc-rabbitmq-shared-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.1.0.0/16
-          gateway: 77.1.0.254
-
-  vc-identity-internal-network:
-    name: vc-identity-internal-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.2.0.0/16
-          gateway: 77.2.0.254
-
-  vc-identity-shared-network:
-    name: vc-identity-shared-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.3.0.0/16
-          gateway: 77.3.0.254
-
-  vc-clinicmanagement-internal-network:
-    name: vc-clinicmanagement-internal-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.4.0.0/16
-          gateway: 77.4.0.254
-
-  vc-scheduling-internal-network:
-    name: vc-scheduling-internal-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.5.0.0/16
-          gateway: 77.5.0.254
-
-  vc-emailservice-shared-network:
-    name: vc-emailservice-shared-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.6.0.0/16
-          gateway: 77.6.0.254
-
-  vc-samba-shared-network:
-    name: vc-samba-shared-network
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 77.7.0.0/16
-          gateway: 77.7.0.254
-
-volumes:
-  samba-volume:
-    driver: local
-    driver_opts:
-      type: cifs
-      device: //77.7.0.1/storage
-      o: "username=guest,password=guest,vers=3.0"
