--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ClinicManagement;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,14330;Database=ClinicManagement;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true"
   },
   "ClientStorageSetting": {
     "BasePath": "C:\\VeterinaryClinic\\Clients"
