--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "IdentityConnection": "Server=localhost;Database=Identity;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True",
-    "IdentityServerConnection": "Server=localhost;Database=IdentityServer;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+    "IdentityConnection": "Server=localhost,14330;Database=Identity;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true",
+    "IdentityServerConnection": "Server=localhost,14330;Database=IdentityServer;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true"
   },
   "CookiePolicySetting": {
     "MinimumSameSitePolicy": "Lax"
