--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Scheduling;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,14330;Database=Scheduling;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true"
   },
   "ClientStorageSetting": {
     "BasePath": "C:\\VeterinaryClinic\\Clients"
