--- a/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/appsettings.Development.json
+++ b/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SchedulingEmailSender;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,14330;Database=SchedulingEmailSender;User ID=sa;Password=VeterinaryClinic123!;Integrated Security=false;TrustServerCertificate=true;PersistSecurityInfo=true;MultipleActiveResultSets=true"
   },
   "EmailTemplateSetting": {
     "UrlQueryToConfirmAppointment": "https://localhost:7138/appointment/confirm?id={0}&language={1}"
