ClinicManagement.Api visibility to ClinicManagement.IntegrationTests #36

--- a/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
+++ b/ClinicManagement/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagement.Api/Fnunez.VeterinaryClinic.ClinicManagement.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Infrastructure\Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure\Fnunez.VeterinaryClinic.ClinicManagement.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Fnunez.VeterinaryClinic.ClinicManagement.Application.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
