--- a/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Fnunez.VeterinaryClinic.Scheduling.Api.csproj
+++ b/Scheduling/src/Presentation/Fnunez.VeterinaryClinic.Scheduling.Api/Fnunez.VeterinaryClinic.Scheduling.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Infrastructure\Fnunez.VeterinaryClinic.Scheduling.Infrastructure\Fnunez.VeterinaryClinic.Scheduling.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Fnunez.VeterinaryClinic.Scheduling.Application.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
