Make Api visible to integration tests for application layer #36

--- a/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api.csproj
+++ b/ClinicManagementN/src/Presentation/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api/Fnunez.VeterinaryClinic.ClinicManagementNotifications.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Infrastructure\Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure\Fnunez.VeterinaryClinic.ClinicManagementNotifications.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Fnunez.VeterinaryClinic.ClinicManagementNotifications.Application.IntegrationTests" />
+  </ItemGroup>
+
 </Project>
