--- a/SchedulingES/src/Core/Fnunez.VeterinaryClinic.SchedulingEmailSender.Application/Fnunez.VeterinaryClinic.SchedulingEmailSender.Application.csproj
+++ b/SchedulingES/src/Core/Fnunez.VeterinaryClinic.SchedulingEmailSender.Application/Fnunez.VeterinaryClinic.SchedulingEmailSender.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.3" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
