--- a/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
+++ b/SchedulingN/src/Core/Fnunez.VeterinaryClinic.SchedulingNotifications.Application/Fnunez.VeterinaryClinic.SchedulingNotifications.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageReference Include="Fnunez.VeterinaryClinic.SharedKernel.Application" Version="1.3.3" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
